
namespace Pacmania.InGame.Characters
{
    static class CharacterAnimatorParameterNames
    {
        public static string Horizontal = "Horizontal";
        public static string Vertical = "Vertical";
        public static string State = "State";
        public static string Dying = "Dying";
        public static string CruiseElroy = "Cruise Elroy";
        public static string ShadowNumber = "ShadowNumber";
    }
}
